tests/fixtures/invalid/none_sub_int.py
# Cannot subtract None and Int
x: None = None - 1
